# totoro-agent

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ABOUT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.py  longcat_agent.py  longcat_agent_openai.py  pyproject.toml  test_smoke.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py  context.py  engine.py
cli/: __init__.py  main.py  repl.py
docs/: architecture.md
evals/: conftest.py  test_basic.py  test_consistency.py  test_error_handling.py  test_latency.py  test_streaming.py  test_summary.py
providers/: __init__.py  anthropic_provider.py  base.py  longcat_provider.py  openai_provider.py  registry.py  totoro_provider.py
sandbox/: __init__.py  executor.py
tests/: conftest.py  test_agent_context.py  test_agent_engine.py  test_cli_repl.py  test_config.py  test_crash_edge_cases.py  test_crash_more_coverage.py  test_providers.py  test_sandbox.py  test_tools_base.py  test_tools_bash.py  test_tools_file.py  test_tools_git.py  test_tools_project.py  test_tools_registry.py  test_tools_web.py
tools/: __init__.py  base.py  bash_tool.py  file_tools.py  git_tool.py  project_tool.py  registry.py  web_tools.py
